--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@three.ez/main": "^0.5.12",
     "rxjs": "~7.8.0",
     "three": "^0.156.1",
     "tslib": "^2.3.0"
