--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^21.0.0",
     "@three.ez/main": "^0.5.12",
     "rxjs": "~7.8.0",
+    "sql.js": "^1.13.0",
     "three": "^0.156.1",
     "tslib": "^2.3.0"
   },
@@ -38,6 +39,7 @@
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.0",
+    "@types/sql.js": "^1.4.9",
     "@types/three": "^0.182.0",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
