--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,8 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "docs/",
+            "baseHref": "/ProjectWorld/",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
